--- a/.azure-pipelines/deploy.yml
+++ b/.azure-pipelines/deploy.yml
@@ -47,6 +47,8 @@ stages:
       runOnce:
         deploy:
           steps:
+            - checkout: self
+            
             - task: AzureCLI@2
               displayName: DeployPrdServicesBicep
               inputs:
