--- a/.azure-pipelines/validate.yml
+++ b/.azure-pipelines/validate.yml
@@ -46,6 +46,8 @@ stages:
       runOnce:
         deploy:
           steps:
+            - checkout: self
+            
             - task: AzureCLI@2
               name: RunPreflightValidation
               inputs:
