--- a/.azure-pipelines/one-pipeline.yml
+++ b/.azure-pipelines/one-pipeline.yml
@@ -34,10 +34,13 @@ stages:
       dependsOn: [BicepLinter]
       jobName: 'ValidateBicepAgainstPrdEnvironment'
       azureSubscription: 'spn-ado-Personal-Public-platform-monitoring'
-      environment: 'prd'
+      environment: 'platform-monitoring-prd'
+      environmentName: 'Prd'
+      environmentTag: 'prd'
 
 - template: templates/deploy-environment.yml
   parameters:
     azureSubscription: 'spn-ado-Personal-Public-platform-monitoring'
-    environmentFriendlyName: 'Prd'
-    environment: 'prd'
+    environment: 'platform-monitoring-prd'
+    environmentName: 'Prd'
+    environmentTag: 'prd'
