--- a/.azure-pipelines/templates/bicep-environment-validation.yml
+++ b/.azure-pipelines/templates/bicep-environment-validation.yml
@@ -2,6 +2,8 @@ parameters:
 - name: dependsOn
   type: object
   default: []
+- name: azureSubscription
+  type: string
 - name: environment
   type: string
 - name: environmentName
