--- a/.azure-pipelines/templates/bicep-environment-validation.yml
+++ b/.azure-pipelines/templates/bicep-environment-validation.yml
@@ -31,18 +31,37 @@ jobs:
               azureSubscription: ${{ parameters.azureSubscription }}
               scriptType: 'pscore'
               scriptLocation: 'inlineScript'
+              addSpnToEnvironment: true
               inlineScript: |
+                $deployPrincipalId = (az ad sp show --id $env:servicePrincipalId | ConvertFrom-Json).id
+
+                az deployment sub validate `
+                  --name 'strategicKeyVault${{ parameters.environmentName }}' `
+                  --template-file bicep/platformKeyVault.bicep `
+                  --location 'uksouth' `
+                  --parameters @params/platformKeyVault.${{ parameters.environmentTag }}.json `
+                      parPlatformKeyVaultCreateMode='recover' `
+                      parDeployPrincipalId=$deployPrincipalId
+
+                $keyVaults = az keyvault list --query '[].id' | ConvertFrom-Json
+                $existing = $keyVaults | where {$_ -match 'rg-platform-monitoring-*.*-${{ parameters.environmentTag }}-uksouth'}
+
                 az deployment sub validate `
                   --name 'platformMonitoring${{ parameters.environmentName }}' `
                   --template-file bicep/platform.bicep `
                   --location 'uksouth' `
-                  --parameters @params/platform.${{ parameters.environmentTag }}.json
+                  --parameters @params/platform.${{ parameters.environmentTag }}.json `
+                      parPlatformKeyVaultCreateMode=$keyVaultCreateMode `
+                      parDeployPrincipalId=$deployPrincipalId
 
-                if ((az group exists --name 'rg-platform-monitoring-${{ parameters.environmentTag }}-uksouth') -eq $true) { 
-                  Write-Host "Performing az deployment group validation as 'rg-platform-monitoring-${{ parameters.environmentTag }}-uksouth' exists"
+                $deployment = az deployment sub show --name platformMonitoring${{ parameters.environmentName }} 2>$null
+
+                if ($null -ne $deployment) { 
+                  $resourceGroupName = ($deployment | ConvertFrom-Json).properties.outputs.resourceGroupName
+
                   az deployment group validate `
                     --name 'servicesMonitoring${{ parameters.environmentName }}' `
-                    --resource-group 'rg-platform-monitoring-${{ parameters.environmentTag }}-uksouth' `
+                    --resource-group $resourceGroupName' `
                     --template-file $(Build.sourcesDirectory)/bicep/services.bicep `
                     --parameters @$(Build.sourcesDirectory)/params/services.${{ parameters.environmentTag }}.json
                 }
@@ -60,8 +79,11 @@ jobs:
                   --location 'uksouth' `
                   --parameters @params/platform.${{ parameters.environmentTag }}.json
 
-                if ((az group exists --name 'rg-platform-monitoring-${{ parameters.environmentTag }}-uksouth') -eq $true) { 
-                  Write-Host "Performing az deployment group validation as 'rg-platform-monitoring-${{ parameters.environmentTag }}-uksouth' exists"
+                $deployment = az deployment sub show --name platformMonitoring${{ parameters.environmentName }} 2>$null
+
+                if ($null -ne $deployment) { 
+                  $resourceGroupName = ($deployment | ConvertFrom-Json).properties.outputs.resourceGroupName
+
                   az deployment group what-if `
                     --name 'servicesMonitoring${{ parameters.environmentName }}' `
                     --resource-group 'rg-platform-monitoring-${{ parameters.environmentTag }}-uksouth' `
