--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -68,7 +68,7 @@ stages:
                 scriptLocation: 'inlineScript'
                 inlineScript: |
                   $deployment = az deployment sub show --name platformMonitoring${{ parameters.environmentName }} 2>$null
-                  $resourceGroupName = ($deployment | ConvertFrom-Json).properties.outputs.resourceGroupName
+                  $resourceGroupName = ($deployment | ConvertFrom-Json).properties.outputs.resourceGroupName.value
 
                   az deployment group create `
                     --name 'servicesMonitoring${{ parameters.environmentName }}' `
