--- a/.azure-pipelines/templates/bicep-environment-validation.yml
+++ b/.azure-pipelines/templates/bicep-environment-validation.yml
@@ -33,15 +33,17 @@ jobs:
               scriptLocation: 'inlineScript'
               addSpnToEnvironment: true
               inlineScript: |
+                $config = (Get-Content $(Build.sourcesDirectory)/params/platform.${{ parameters.environmentTag }}.json | ConvertFrom-Json)
+
                 $deployPrincipalId = (az ad sp show --id $env:servicePrincipalId | ConvertFrom-Json).id
 
                 $keyVaults = az keyvault list --query '[].id' | ConvertFrom-Json
-                $existing = $keyVaults | where {$_ -match 'rg-platform-monitoring-*.*-${{ parameters.environmentTag }}-uksouth'}
+                $existing = $keyVaults | where {$_ -match 'rg-platform-monitoring-${{ parameters.environmentTag }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)'}
 
                 az deployment sub validate `
                   --name 'platformMonitoring${{ parameters.environmentName }}' `
                   --template-file bicep/platform.bicep `
-                  --location 'uksouth' `
+                  --location $config.parameters.parLocation.value `
                   --parameters @params/platform.${{ parameters.environmentTag }}.json `
                       parPlatformKeyVaultCreateMode=$keyVaultCreateMode `
                       parDeployPrincipalId=$deployPrincipalId
@@ -67,10 +69,12 @@ jobs:
               scriptType: 'pscore'
               scriptLocation: 'inlineScript'
               inlineScript: |
+                $config = (Get-Content $(Build.sourcesDirectory)/params/platform.${{ parameters.environmentTag }}.json | ConvertFrom-Json)
+
                 az deployment sub what-if `
                   --name 'platformMonitoring${{ parameters.environmentName }}' `
                   --template-file bicep/platform.bicep `
-                  --location 'uksouth' `
+                  --location $config.parameters.parLocation.value `
                   --parameters @params/platform.${{ parameters.environmentTag }}.json
 
                 $deployment = az deployment sub show --name platformMonitoring${{ parameters.environmentName }} 2>$null
