--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -31,26 +31,26 @@ stages:
                 scriptLocation: 'inlineScript'
                 addSpnToEnvironment: true
                 inlineScript: |
-                  #$config = (Get-Content $(Build.sourcesDirectory)/params/platform.${{ parameters.environmentTag }}.json | ConvertFrom-Json)
+                  $config = (Get-Content $(Build.sourcesDirectory)/params/platform.${{ parameters.environmentTag }}.json | ConvertFrom-Json)
 
-                  #$deployPrincipalId = (az ad sp show --id $env:servicePrincipalId | ConvertFrom-Json).id
+                  $deployPrincipalId = (az ad sp show --id $env:servicePrincipalId | ConvertFrom-Json).id
 
-                  #$deletedKeyVaults = az keyvault list-deleted --query '[].properties.vaultId' | ConvertFrom-Json
-                  #$isDeleted = $deletedKeyVaults | where {$_ -match 'rg-platform-monitoring-${{ parameters.environmentTag }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)'}
+                  $deletedKeyVaults = az keyvault list-deleted --query '[].properties.vaultId' | ConvertFrom-Json
+                  $isDeleted = $deletedKeyVaults | where {$_ -match 'rg-platform-monitoring-${{ parameters.environmentTag }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)'}
 
-                  #$keyVaultCreateMode = "default"
-                  #if ($isDeleted -ne $null) {
-                  #  # To allow the environments to be torn-down and re-created, the Key Vault Create Mode must be set to 'recover'.
-                  #  $keyVaultCreateMode = "recover"
-                  #}
+                  $keyVaultCreateMode = "default"
+                  if ($isDeleted -ne $null) {
+                    # To allow the environments to be torn-down and re-created, the Key Vault Create Mode must be set to 'recover'.
+                    $keyVaultCreateMode = "recover"
+                  }
 
-                  #az deployment sub create `
-                  #  --name 'platformMonitoring${{ parameters.environmentName }}' `
-                  #  --template-file bicep/platform.bicep `
-                  #  --location $config.parameters.parLocation.value `
-                  #  --parameters @params/platform.${{ parameters.environmentTag }}.json `
-                  #    parPlatformKeyVaultCreateMode=$keyVaultCreateMode `
-                  #    parDeployPrincipalId=$deployPrincipalId
+                  az deployment sub create `
+                    --name 'platformMonitoring${{ parameters.environmentName }}' `
+                    --template-file bicep/platform.bicep `
+                    --location $config.parameters.parLocation.value `
+                    --parameters @params/platform.${{ parameters.environmentTag }}.json `
+                      parPlatformKeyVaultCreateMode=$keyVaultCreateMode `
+                      parDeployPrincipalId=$deployPrincipalId
 
   - deployment: Deploy${{ parameters.environmentName }}ServicesBicep
     dependsOn: ['Deploy${{ parameters.environmentName }}PlatformBicep']
