Update param naming

--- a/.azure-pipelines/templates/bicep-environment-validation.yml
+++ b/.azure-pipelines/templates/bicep-environment-validation.yml
@@ -45,7 +45,7 @@ jobs:
                 #  --template-file bicep/platform.bicep `
                 #  --location $config.parameters.parLocation.value `
                 #  --parameters @params/platform.${{ parameters.environmentTag }}.json `
-                #      parPlatformKeyVaultCreateMode=$keyVaultCreateMode `
+                #      parKeyVaultCreateMode=$keyVaultCreateMode `
                 #      parDeployPrincipalId=$deployPrincipalId
 
                 #if ((az group exists --name 'rg-platform-monitoring-${{ parameters.environmentTag }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)') -eq $true) {
