--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -49,7 +49,7 @@ stages:
                     --template-file bicep/platform.bicep `
                     --location $config.parameters.parLocation.value `
                     --parameters @params/platform.${{ parameters.environmentTag }}.json `
-                      parPlatformKeyVaultCreateMode=$keyVaultCreateMode `
+                      parKeyVaultCreateMode=$keyVaultCreateMode `
                       parDeployPrincipalId=$deployPrincipalId
 
   - deployment: Deploy${{ parameters.environmentName }}ServicesBicep
