--- a/.azure-pipelines/templates/bicep-environment-validation.yml
+++ b/.azure-pipelines/templates/bicep-environment-validation.yml
@@ -62,14 +62,22 @@ jobs:
               azureSubscription: ${{ parameters.azureSubscription }}
               scriptType: 'pscore'
               scriptLocation: 'inlineScript'
+              addSpnToEnvironment: true
               inlineScript: |
                 $config = (Get-Content $(Build.sourcesDirectory)/params/platform.${{ parameters.environmentTag }}.json | ConvertFrom-Json)
+
+                $deployPrincipalId = (az ad sp show --id $env:servicePrincipalId | ConvertFrom-Json).id
+
+                $keyVaults = az keyvault list --query '[].id' | ConvertFrom-Json
+                $existing = $keyVaults | where {$_ -match 'rg-platform-monitoring-${{ parameters.environmentTag }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)'}
 
                 az deployment sub what-if `
                   --name 'platformMonitoring${{ parameters.environmentName }}' `
                   --template-file bicep/platform.bicep `
                   --location $config.parameters.parLocation.value `
-                  --parameters @params/platform.${{ parameters.environmentTag }}.json
+                  --parameters @params/platform.${{ parameters.environmentTag }}.json `
+                      parKeyVaultCreateMode=$keyVaultCreateMode `
+                      parDeployPrincipalId=$deployPrincipalId
 
                 if ((az group exists --name 'rg-platform-monitoring-${{ parameters.environmentTag }}-$($config.parameters.parLocation.value)-$($config.parameters.parInstance.value)') -eq $true) {
                   az deployment group what-if `
